# CLanguage

bit_peng_lesson/01_getting_started_with_c/learning_2025-12-06/: 01_my_first_project.c  CMakeLists.txt  clean.sh
bit_peng_lesson/01_getting_started_with_c/learning_2025-12-06/app/: MyFirstProject
bit_peng_lesson/01_getting_started_with_c/learning_2025-12-07/: 01_data_type.c  02_constant_and_viriable.c  CMakeLists.txt
bit_peng_lesson/01_getting_started_with_c/learning_2025-12-07/app/: 01_data_type  02_constant_and_viriable
bit_peng_lesson/01_getting_started_with_c/learning_2025-12-17/: 01_constant.c  02_string.c
bit_peng_lesson/01_getting_started_with_c/learning_2025-12-18/: 01_escape_character.c  02_comment.c  03_selection_and_loop.c  04_function.c  CMakeLists.txt
bit_peng_lesson/01_getting_started_with_c/learning_2025-12-20/: 01_array.c  02_homework01.c  03_operator.c  CMakeLists.txt
bit_peng_lesson/01_getting_started_with_c/learning_2025-12-21/: 00_variable.c  01_typedef_and_static.c  02_register_variable.c  03_define.c  04_pointer.c  05_struct.c  CMakeLists.txt  README.md
bit_peng_lesson/01_getting_started_with_c/learning_2025-12-21/app/: 01_typedef_and_static  02_register_variable  03_define  04_pointer  05_struct
bit_peng_lesson/02_c_language_introductory_level/01_learning_branch_and_loop/: 01_if.c  02_switch.c  03_while.c  04_for.c  05_do_while.c  CMakeLists.txt
practice/: 01_p30test.c  02_p31test.c  03_p36test.c  CMakeLists.txt  executable.sh
practice/app/: 01_p30test  02_p31test  03_p36test
(+15 files in other folders)
